--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> "Stekweb - A Sexy webdesign bureau" </title>
   <meta name="description" content="Website design bureau">
   <meta name="keywords" content="Website bouwen, ontwerp, lancering">
@@ -23,16 +23,19 @@
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+
       <![endif]-->
+      <link rel="icon" href="img/favi.png" type="image/x-icon"/>
+      <link rel="shortcut icon" href="img/favi.png" type="image/x-icon"/>
     </head>
     <body>
       <section class="navigation">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-4 col-xs-offset-4">
+            <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-4">
               <nav class="pull">
                 <ul class="top-nav">
-                  <li><a href="#getstarted">Aan de slag <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                  <li><a href="#getstarted">Producten <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                   <li><a href="#media">Motto <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                   <li><a href="#features">Hoe gaan we aan de slag <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                   <li class="nav-last"><a href="#design">Ontwerpen <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
@@ -56,7 +59,7 @@
           </div>
           <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center">
-              <h1 class="animated bounceInDown">StekWeb</h1>
+              <h1 class="animated bounceInDown"><a class="badge-logo"></a></h1>
               <p class="animated fadeInUpDelay">
                 de webstek zelfst.naamw. (m.) Uitspraak:   ['wɛpstɛk] Verbuigingen:   webstek|s (meerv.) verzameling informatie op het internet Voorbeeld:   `Welkom op de webstek van... Stekweb`Synoniem:   website © </p>
               </div>
@@ -77,7 +80,7 @@
                </h1>
                <p>Onze ontwerpen werken fantastisch op elk 'device'. Door het gebruik van de nieuwste technieken in de branche. Een paar daarvan zijn oa: Bootstrap, Flexbox, Semantic & JavaScript</p>
                <p>Daarom zijn wij de go-to oplossing voor elke start-up of MKB.</p>
-               <a href="mailto:info@stekweb.nl?subject=Contact&body=Hi, ik zou graag meer informatie willen over uw diensten verstuurd vanaf:http://www.stekweb.nl" class="download-btn">Mail ons!</a>
+               <a href="mailto:info@stekweb.nl?subject=Contact&body=Hi, ik zou graag meer informatie willen over uw diensten verstuurd vanaf:http://www.stekweb.nl" class="mail-btn">Mail ons!</a>
              </div>
            </div>
          </div>
@@ -109,7 +112,7 @@
     </section>
     <section class="features" id="features">
       <h2 class="hoe text-center"> Hoe we aan de slag gaan samen. </h2>
-      <div class="container">
+      <div class="container text-center">
         <div class="row">
           <div class="col-md-6 features-leftcol wp2">
             <h1>Stap 1</h1>
