--- a/index.html
+++ b/index.html
@@ -53,11 +53,6 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-2 col-md-offset-5 text-center">
-              <a href="#" class="badge-btn"></a> <!-- various fancybox.iframe" -->
-            </div>
-          </div>
-          <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center">
               <h1 class="animated bounceInDown"><a class="badge-logo"></a></h1>
               <p class="animated fadeInUpDelay">
@@ -242,45 +237,28 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-              <h4 class="modal-title" id="myModalLabel">Waar wacht je nog op, mail ons! </h4>
+              <h4 class="modal-title" id="myModalLabel">Waar wacht je nog op,  </h4>
             </div>
             <div class="modal-body">
-<form method="post" name="contact_form"
-action="contact-form-handler.php">
-    Your Name:
-    <input type="text" name="name">
-    Email Address:
-    <input type="text" name="email">
-    Message:
-    <textarea name="message"></textarea>
-    <input type="submit" value="Submit">
-</form>
-<script language="JavaScript">
-var frmvalidator  = new Validator("contactform");
-frmvalidator.addValidation("name","req","Please provide your name");
-frmvalidator.addValidation("email","req","Please provide your email");
-frmvalidator.addValidation("email","email",
-  "Please enter a valid email address");
-</script>
-
-
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+              <a href="mailto:info@stekweb.nl?subject=Contact&body=Hi, ik zou graag meer informatie willen over uw diensten verstuurd vanaf:http://www.stekweb.nl" class="mail-btn-modal">Mail Ons!</a>
+              <a class="badge-logo-modal"></a>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Sluit deze Spam</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/jquery.fancybox.pack.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js?v=1.7"></script>
-    <script src="js/jquery.flexslider.js"></script>
-    <script src="js/jquery.smooth-scroll.js"></script>
-    <script src="js/modernizr.js"></script>
-    <script src="js/waypoints.min.js"></script>
-  </body>
-  </html>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/jquery.fancybox.pack.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/scripts.js?v=1.7"></script>
+        <script src="js/jquery.flexslider.js"></script>
+        <script src="js/jquery.smooth-scroll.js"></script>
+        <script src="js/modernizr.js"></script>
+        <script src="js/waypoints.min.js"></script>
+      </body>
+      </html>
